fixes for IE vle issues 79 & 80 (top navigation buttons not showing up, small window size), progress on homepage redesign, style updates

--- a/webapp/branches/webapp-3.1/src/main/webapp/themes/tels/default/styles/globalstyles.css
+++ b/webapp/branches/webapp-3.1/src/main/webapp/themes/tels/default/styles/globalstyles.css
@@ -18,6 +18,14 @@
   
 /* THESE STYLES ARE USED GLOBALLY IN THE SITE  */	
 
+/* CSS Reset */
+html,body,div,ul,ol,li,dl,dt,dd,h1,h2,h3,h4,h5,h6,pre,form,p,blockquote,fieldset,input,hr,a {margin:0; padding:0;}
+h1,h2,h3,h4,h5,h6,pre,code,address,caption,cite,code,em,strong,th {font-size:1em; font-weight:normal; font-style:normal;}
+ul,ol {list-style:none;}
+fieldset,img,hr {border:none;}
+caption,th {text-align:left;}
+table {border-collapse:collapse; border-spacing:0;}
+td {vertical-align:top;}
 
 body {
 	font-family: "Lucida Grande", "Lucida San Unicode", "Gill Sans", Helvetica, Arial;	
