--- a/webapp/branches/webapp-3.1/src/main/webapp/themes/tels/default/styles/homepagestyles.css
+++ b/webapp/branches/webapp-3.1/src/main/webapp/themes/tels/default/styles/homepagestyles.css
@@ -119,7 +119,7 @@
 	padding:0px;
 }
 
-.welcomeLink {
+a.welcomeLink {
 	display:block; 
 	color:#FFFFFF; 
 	text-decoration:none;
@@ -130,15 +130,14 @@
 	border: 1px solid #333333;
 	padding:4px 3px 3px 5px;
 	cursor:pointer;
-	}
+}
 	
-a.welcomeLink:hover, .welcomeLink:hover {
+a.welcomeLink:hover {
 	color:#000000;
 	text-decoration:none;
 	background-color:#ffff33;
 	border: 1px solid #6666CC;
-	cursor:pointer;
-	}
+}
 
 #welcomeBullet1 a {
 	color:blue;
@@ -432,11 +431,11 @@ a.welcomeLink:hover, .welcomeLink:hover {
 }
 
 #footerTable li {
-	display:inline;
+	display:inline-block;
 	padding-right:8px;
-	border-right-width: 1px;
-	border-right-style: solid;
-	border-right-color: #999999;
+	border-right: 1px solid #999999;
+	zoom: 1;
+	*display:inline;
 	}
 	
 #footerNav2 {
